--- a/composer.json
+++ b/composer.json
@@ -13,18 +13,17 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "doctrine/dbal": "~2.5.1",
+        "doctrine/dbal": "~2.5",
         "incenteev/composer-parameter-handler": "~2.1",
         "passwordlib/passwordlib": "@dev",
-        "phpseclib/phpseclib": "2.0.*@dev",
+        "phpseclib/phpseclib": "~2.0",
         "roderik/pwgen-php": "@stable",
         "silex/silex": "~1.3",
-        "symfony/finder": "~2.7.1",
-        "symfony/translation": "~2.7.1"
+        "symfony/finder": "~2.7",
+        "symfony/translation": "~2.7"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer": "2.0.*@dev",
-        "mmoreram/php-formatter": "1.0.*@dev"
+        "fabpot/php-cs-fixer": "2.0.x-dev"
     },
     "autoload": {
         "psr-4": {
@@ -32,7 +31,10 @@
         }
     },
     "config": {
-        "bin-dir": "bin"
+        "bin-dir": "bin",
+        "platform": {
+            "php": "5.5.9"
+        }
     },
     "scripts": {
         "post-install-cmd": [
