--- a/.editorconfig
+++ b/.editorconfig
@@ -2,12 +2,15 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
-end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = lf
 insert_final_newline = true
+indent_size = 4
+indent_style = space
+trim_trailing_whitespace = true
+
+[*.php]
+indent_size = 4
 
 [*.md]
 trim_trailing_whitespace = false
