--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
                 "name": "gilfether/phpcrypt",
                 "version": "0.5.1",
                 "source": {
-                    "url": "git@github.com:gilfether/phpcrypt.git",
+                    "url": "https://github.com/gilfether/phpcrypt.git",
                     "type": "git",
                     "reference":"v0.5.1"
                 },
@@ -29,19 +29,16 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "doctrine/dbal": "~2.5",
-        "gilfether/phpcrypt": "^0.5",
-        "incenteev/composer-parameter-handler": "~2.1",
+        "php": "^5.5|^7.0",
+        "doctrine/dbal": "^2.5.5",
+        "gilfether/phpcrypt": "^0.5.1",
+        "incenteev/composer-parameter-handler": "^2.1.2",
         "passwordlib/passwordlib": "@dev",
-        "phpseclib/phpseclib": "~2.0",
-        "roderik/pwgen-php": "@stable",
-        "silex/silex": "~1.3",
-        "symfony/finder": "~2.7",
-        "symfony/translation": "~2.7"
-    },
-    "require-dev": {
-        "fabpot/php-cs-fixer": "^1.10"
+        "phpseclib/phpseclib": "^2.0.4",
+        "roderik/pwgen-php": "^0.1.5",
+        "silex/silex": "^1.3.5",
+        "symfony/finder": "^3.1",
+        "symfony/translation": "^3.1"
     },
     "autoload": {
         "psr-4": {
@@ -49,10 +46,7 @@
         }
     },
     "config": {
-        "bin-dir": "bin",
-        "platform": {
-            "php": "5.5.9"
-        }
+        "bin-dir": "bin"
     },
     "scripts": {
         "post-install-cmd": [
